<resources>
    <string name="app_name">Minhas Compras</string>
    <string name="titulo_a">titulo</string>
    <string name="msg_a">mensagem</string>
    <string name="msg_b">mensagem</string>
    <string name="msg_c">mensagem</string>
    <string name="msg_d">mensagem</string>
    <string name="msg_e">mensagem</string>
    <string name="icone_tela_a">icone tela um</string>
    <string name="icone_tela_b">icone tela dois</string>
    <string name="icone_tela_c">icone tela três</string>
    <string name="icone_tela_d">icone tela quatro</string>
    <string name="icone_tela_e">icone tela cinco</string>
    <string name="crie_sua_lista_de_compras_se_quiser">Crie sua lista de compras,\n se quiser, ou vá direto \npara as compras</string>
    <string name="criar_lista">Criar lista</string>
    <string name="comprar">Comprar</string>
    <string name="texto_comprar">"você pode escolher o nome \ndo produto na sua lista de \ncompra, escrever na hora ou \ndeixar sem nome, você decide."</string>
    <string name="concluir">Concluir</string>
    <string name="incluir">incluir</string>
    <string name="finalizar">finalizar</string>
    <string name="levar">levar</string>
    <string name="calcular">calcular</string>
    <string name="nome_do_produto">nome do produto</string>
    <string name="pre_o">preço</string>
    <string name="qtde">qtde</string>
    <string name="total">total</string>
    <string name="digite_o_nome_do_produto">digite o nome do produto</string>
    <string name="ir_comprar">ir para as compras</string>
    <string name="incluir_item">incluir item na lista</string>
    <string name="crie_um_usu_rio_com_senha_para_n_logar_e_salvar_suas_compras">crie um usuário com senha para\n logar e salvar suas compras</string>
    <string name="criar_usuario">criar usuer</string>
    <string name="nome_de_usu_rio">nome de usuário</string>
    <string name="digite_uma_senha">digite uma senha</string>
    <string name="digite_um_e_mail">digite um e-mail</string>
    <string name="voltar">voltar </string>
    <string name="apagar">apagar</string>
    <string name="sair">sair</string>
    <string name="listar">listar</string>
    <string name="editar">editar</string>
    <string name="cancelar">cancelar</string>
    <string name="alterar">alterar</string>
    <string name="inclua_item_na_lista">digite o nome do produto \ne inclua na lista</string>
    <string name="salvar_compra">salvar compra</string>
    <string name="editar_compra">editar compra</string>
    <string name="valor_real">R$</string>
    <string name="logar">logar</string>
    <string name="senha">senha</string>
    <string name="criar_email">criar email</string>
    <string name="total_compras">compra : R$ </string>
    <string name="total_itens">, itens : </string>
    <string name="lista_de_compras">selecione o produto aqui.</string>
    <string name="clique_em_uma_data_para">clique em uma data para ver \ndetalhes da compra</string>
    <string name="lista_compra">lista de compras</string>
    <string name="apagar_compra">para apagar uma compra, dê um clique longo.</string>
    <string name="detalhes_compra">detalhes de compra</string>
</resources>