<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".act.ActivityPrincipal">

    <include
        android:id="@+id/toolbar_layout_principal"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/iv_compra"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/icone_tela_a"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout_principal"
        app:srcCompat="@drawable/supermercados" />

    <TextView
        android:id="@+id/textViewDetalheCompra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/crie_sua_lista_de_compras_se_quiser"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_compra" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_incluir_item_lista"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:onClick="onclickSelecao"
            android:text="@string/criar_lista"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_ir_para_comprar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:onClick="onclickSelecao"
            android:text="@string/comprar"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_ir_para_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:onClick="onclickSelecao"
            android:text="@string/criar_usuario"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>