<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparente"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_adapter_lista_produto_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:autofillHints="no"
            android:gravity="center"
            android:hint="@string/nome_do_produto"
            android:textColor="@color/white_texto"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_adapter_produto_qtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:autofillHints="no"
            android:gravity="center"
            android:hint="@string/qtde"
            android:textColor="@color/white_texto"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_adapter_produto_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:autofillHints="no"
            android:gravity="center"
            android:hint="@string/total"
            android:textColor="@color/white_texto"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginTop="3dp"
        android:background="@color/red"
        android:gravity="center"
        android:textStyle="bold" />


</LinearLayout>